# EfiDump

./: LICENSE.txt  README.md
client/: CMakeLists.txt  compile_commands.json
client/.clangd/index/: CMakeCCompilerId.c.4108231E54522548.idx  argtable3.c.4232D2BC456ECB65.idx  argtable3.h.7D0C68BD3CE20DCD.idx  dumper.h.39FEB14541BB5E88.idx  efi.cc.01DA2873BFEAEFDB.idx  efi.h.901D0FE6F216A11F.idx  helper.cc.5AEA4F726C0F5AF3.idx  helper.h.780B5DC62A0AFB76.idx  log.h.291AAC2CAEA00503.idx  main.cc.254539211CD34B9C.idx  utils.cc.232DE21AF443D8A4.idx  utils.h.230793F233976B0D.idx
client/src/: dumper.cc  dumper.h  efi.cc  efi.h  helper.cc  helper.h  log.cc  log.h  main.cc  modules.cc  modules.h  utils.cc  utils.h
driver/: CMakeLists.txt
driver/src/: general.h  handler.c  handler.h  hooks.c  hooks.h  main.c  nt.h
